fix(select): padding for scrollbar

--- a/packages/components/select/src/style/select.mixin.less
+++ b/packages/components/select/src/style/select.mixin.less
@@ -77,8 +77,8 @@
     font-size: 20px;
     z-index: 11;
   }
-   > .@{ant-prefix}-select-item-option-content{
-    padding-right:32px;
+  > .@{ant-prefix}-select-item-option-content {
+    padding-right: 32px;
   }
 }
 
@@ -139,6 +139,9 @@
     line-height: 18px;
     color: @grey-700;
     font-weight: 500;
+  }
+  .@{ant-prefix}-select-item-option-active {
+    background-color: transparent;
   }
   .@{ant-prefix}-select-item-option {
     border-radius: 3px;
